[package]
name = "rust"
version = "0.1.0"
authors = ["ArakiTakaki <araki_takaki@yahoo.co.jp>"]
edition = "2018"

[[bin]] # --bin start
name = "start"
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "^0.2" # wasm用ライブラリ

nalgebra = "0.27.1" #rotationなどの行列 
# github https://github.com/rustsim/nalgebra
# doc https://docs.rs/nalgebra/0.19.0/nalgebra/

# rulinalg="0.4.2" # 行列計算ライブラリ

[lib]
crate-type = ["cdylib"]

